--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -5,20 +5,31 @@
 <% @movies.each do |movie| %>
   <article>
     <header>
+      <%= image_tag(movie.image_file_name) %>
       <h2><%= link_to movie.title, movie_path(movie) %></h2>
+      <h3><%= movie.cast %></h3>
     </header>
+
     <p>
       <%= truncate(movie.description, length: 40, separator: ' ') %>
     </p>
+
     <table>
       <tr>
         <th>Released:</th>
         <td><%= movie.released_on %></td>
       </tr>
+
       <tr>
         <th>Rating:</th>
         <td><%= movie.rating %></td>
       </tr>
+
+      <tr>
+        <th>Duration:</th>
+        <td><%= movie.duration %></td>
+      </tr>
+
       <tr>
         <th>Total Gross:</th>
         <td><%= format_total_gross(movie) %></td>
