--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,31 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Flix</title>
+  <title>Super-Heroic Flix</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
+
+<header style="padding: 5px; color: #F0F0F0; background: #237CBE;">
+  <h1>Flix</h1>
+</header>
+
 <body>
+
+<aside style="float: right; background: #F0F0F0; width: 200px">
+  <nav>
+    <ul>
+      <li><%= link_to "All Movies", movies_path %></li>
+      <li><%= link_to "Add New Movie", new_movie_path %></li>
+    </ul>
+  </nav>
+</aside>
 
 <%= yield %>
 
 </body>
+
+<%= render 'footer' %>
+
 </html>
