--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,25 +7,15 @@
   <%= csrf_meta_tags %>
 </head>
 
-<header style="padding: 5px; color: #F0F0F0; background: #237CBE;">
-  <h1>Flix</h1>
-</header>
+<%= render 'layouts/header' %>
 
 <body>
 
-<aside style="float: right; background: #F0F0F0; width: 200px">
-  <nav>
-    <ul>
-      <li><%= link_to "All Movies", movies_path %></li>
-      <li><%= link_to "Add New Movie", new_movie_path %></li>
-    </ul>
-  </nav>
-</aside>
-
+<%= render 'layouts/sidebar' %>
 <%= yield %>
 
 </body>
 
-<%= render 'footer' %>
+<%= render 'layouts/footer' %>
 
 </html>
